--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
+    {% for msg in app.flashes('success') %}
+        <div class="alert alert-info" role="alert">
+            {{ msg }}
+        </div>
+    {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
